Adding naming configuration module

--- a/Source/SenseNet/InDoc.Tests.Data/InDoc.Tests.Data.csproj
+++ b/Source/SenseNet/InDoc.Tests.Data/InDoc.Tests.Data.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{DEC6BDF3-0DB6-4ED7-AB06-B26DDE5481D0}</ProjectGuid>
+    <ProjectGuid>{12681B7D-90D9-498C-8B7B-C0AE504AD16E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RadaCode.InDoc.Data</RootNamespace>
-    <AssemblyName>RadaCode.InDoc.Data</AssemblyName>
+    <RootNamespace>InDoc.Tests.Data</RootNamespace>
+    <AssemblyName>InDoc.Tests.Data</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,13 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\..\packages\EntityFramework.4.3.1\lib\net40\EntityFramework.dll</HintPath>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.0.12054\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,16 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DocumentNaming\NamingApproach.cs" />
-    <Compile Include="EF\InDocContext.cs" />
-    <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="NamingApproachesManipulationsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\InDoc\RadaCode.InDoc.Data\RadaCode.InDoc.Data.csproj">
+      <Project>{DEC6BDF3-0DB6-4ED7-AB06-B26DDE5481D0}</Project>
+      <Name>RadaCode.InDoc.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
