--- a/Source/SenseNet/packages/repositories.config
+++ b/Source/SenseNet/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\InDoc.Tests.Data\packages.config" />
   <repository path="..\InDoc\RadaCode.InDoc.Data\packages.config" />
 </repositories>
