Bringing back Lucene index to check the node struct

--- a/Source/SenseNet/WebSite/Web.config
+++ b/Source/SenseNet/WebSite/Web.config
@@ -67,7 +67,7 @@
 		</specialSources>
 	</loggingConfiguration>
 	<connectionStrings>
-				<add name="SnCrMsSql" connectionString="Server=SQL.LIVEREPAIR.LOCAL;Database=FlexNetDataStore;User ID=snSystem;Password=sn5318;Trusted_Connection=False"
+				<add name="SnCrMsSql" connectionString="Server=parabellum.ua.liverepair.com;Database=FlexNetDataStore;User ID=snSystem;Password=sn5318;Trusted_Connection=False"
 			providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<unity>
