Adding admin area

--- a/Source/SenseNet/WebSite/Web.config
+++ b/Source/SenseNet/WebSite/Web.config
@@ -262,9 +262,13 @@
 			<sites>
 				<site path="/Root/Sites/InDocDemo">
 					<urls>
-						<url host="192.168.0.220" auth="Forms" />
-						<url host="fn.radacode.com" auth="Forms" />
-						<url host="localhost:3333" auth="Forms" />
+						<url host="localhost" auth="Forms" />
+						<url host="demo.indoc.local" auth="Forms" />
+					</urls>
+				</site>
+				<site path="/Root/Sites/InDocAdmin">
+					<urls>
+						<url host="admin.indoc.local" auth="Forms" />
 					</urls>
 				</site>
 			</sites>
