A link between ASCX and Razor Views is set up.

--- a/Source/SenseNet/WebSite/Web.config
+++ b/Source/SenseNet/WebSite/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
 	<configSections>
 		<section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging" />
@@ -67,8 +67,10 @@
 		</specialSources>
 	</loggingConfiguration>
 	<connectionStrings>
-				<add name="SnCrMsSql" connectionString="Server=parabellum.ua.liverepair.com;Database=FlexNetDataStore;User ID=snSystem;Password=sn5318;Trusted_Connection=False"
-			providerName="System.Data.SqlClient" />
+		<add name="SnCrMsSql" connectionString="Server=parabellum.ua.liverepair.com;Database=FlexNetDataStore;User ID=snSystem;Password=sn5318;Trusted_Connection=False"
+	providerName="System.Data.SqlClient" />
+		<add name="InDocContext" connectionString="Server=parabellum.ua.liverepair.com;Database=InDocStore;User ID=snSystem;Password=sn5318;Trusted_Connection=False"
+	providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<unity>
 		<typeAliases>
