--- a/Source/SenseNet/InDoc/RadaCode.InDoc.Data/RadaCode.InDoc.Data.csproj
+++ b/Source/SenseNet/InDoc/RadaCode.InDoc.Data/RadaCode.InDoc.Data.csproj
@@ -34,6 +34,12 @@
     <Reference Include="EntityFramework">
       <HintPath>..\..\packages\EntityFramework.4.3.1\lib\net40\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="Ninject">
+      <HintPath>..\..\packages\Ninject.3.0.1.10\lib\net40\Ninject.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject.Web.Common">
+      <HintPath>..\..\packages\Ninject.Web.Common.3.0.0.7\lib\net40-full\Ninject.Web.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -47,7 +53,9 @@
   <ItemGroup>
     <Compile Include="DocumentNaming\NamingApproach.cs" />
     <Compile Include="EF\InDocContext.cs" />
+    <Compile Include="EF\InDocContextInitializer.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Ninject\InDocDataDependenciesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
