--- a/Source/SenseNet/WebSite/WebSite.csproj
+++ b/Source/SenseNet/WebSite/WebSite.csproj
@@ -47,9 +47,22 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\EntLibReferences\Microsoft.Practices.EnterpriseLibrary.Logging.Database.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Web.Preview, Version=1.3.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\References\Microsoft.Web.Preview.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject">
+      <HintPath>..\packages\Ninject.3.0.1.10\lib\net40\Ninject.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject.Web.Common">
+      <HintPath>..\packages\Ninject.Web.Common.3.0.0.7\lib\net40-full\Ninject.Web.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject.Web.Mvc">
+      <HintPath>..\packages\Ninject.MVC3.3.0.0.6\lib\net40-full\Ninject.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Activities" />
@@ -72,8 +85,12 @@
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Web.Mobile" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="WebActivator">
+      <HintPath>..\packages\WebActivator.1.5.1\lib\net40\WebActivator.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="Cleanup.aspx.cs">
       <DependentUpon>Cleanup.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -115,6 +132,10 @@
       <Project>{C7580CC7-3590-43C6-B67E-DDDF9AE50FCD}</Project>
       <Name>HcExplore</Name>
     </ProjectReference>
+    <ProjectReference Include="..\InDoc\RadaCode.InDoc.Data\RadaCode.InDoc.Data.csproj">
+      <Project>{DEC6BDF3-0DB6-4ED7-AB06-B26DDE5481D0}</Project>
+      <Name>RadaCode.InDoc.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LuceneNet_2_9_4g\Lucene.Net.csproj">
       <Project>{5D4AD9BE-1FFB-41AB-9943-25737971BF57}</Project>
       <Name>Lucene.Net</Name>
@@ -126,6 +147,10 @@
     <ProjectReference Include="..\Portlets\CorePortlets\CorePortlets.csproj">
       <Project>{B33E5A6E-4EBC-4192-8B2E-D7E43E8A7820}</Project>
       <Name>CorePortlets</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RadaCode.InDoc.Core\RadaCode.InDoc.Core.csproj">
+      <Project>{C71E5904-1C57-4D5B-B562-5056D55F8622}</Project>
+      <Name>RadaCode.InDoc.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\Storage\Storage.csproj">
       <Project>{5DB4DDBA-81F6-4D81-943A-18F3178B3355}</Project>
@@ -155,6 +180,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
