--- a/Source/SenseNet/packages/repositories.config
+++ b/Source/SenseNet/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\InDoc.Tests.Data\packages.config" />
   <repository path="..\InDoc\RadaCode.InDoc.Data\packages.config" />
+  <repository path="..\WebSite\packages.config" />
 </repositories>
