--- a/Source/SenseNet/RadaCode.InDoc.Core/Views/Web.config
+++ b/Source/SenseNet/RadaCode.InDoc.Core/Views/Web.config
@@ -1,4 +1,4 @@
-﻿<<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <configuration>
   <configSections>
     <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
