Introducing knockoutJS view model into namings editing

--- a/Source/SenseNet/RadaCode.InDoc.Core/RadaCode.InDoc.Core.csproj
+++ b/Source/SenseNet/RadaCode.InDoc.Core/RadaCode.InDoc.Core.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Scripts\InDocAdminInit.js" />
+    <Content Include="Content\Scripts\knockout-2.1.0.js" />
     <Content Include="Renderers\InDocAdmin\NamingsView.ascx" />
   </ItemGroup>
   <ItemGroup>
