--- a/Source/SenseNet/RadaCode.InDoc.Core/RadaCode.InDoc.Core.csproj
+++ b/Source/SenseNet/RadaCode.InDoc.Core/RadaCode.InDoc.Core.csproj
@@ -70,13 +70,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Scripts\ExistingNamingsViewModel.js" />
     <Content Include="Content\Scripts\InDocAdminInit.js" />
     <Content Include="Content\Scripts\knockout-2.1.0.js" />
     <Content Include="Renderers\InDocAdmin\NamingsView.ascx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Views\Namings\ExistingNamings.cshtml" />
-    <None Include="Views\Namings\NamingView.cshtml" />
     <None Include="Views\Web.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
