--- a/Source/SenseNet/InDoc/RadaCode.InDoc.Data/RadaCode.InDoc.Data.csproj
+++ b/Source/SenseNet/InDoc/RadaCode.InDoc.Data/RadaCode.InDoc.Data.csproj
@@ -52,6 +52,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DocumentNaming\NamingApproach.cs" />
+    <Compile Include="DocumentNaming\SpecialNamings\DailyIntIncNaming.cs" />
+    <Compile Include="DocumentNaming\SpecialNamings\GlobalIntIncNaming.cs" />
+    <Compile Include="DocumentNaming\SpecialNamings\SpecialNaming.cs" />
+    <Compile Include="DocumentNaming\SpecialNamings\SpecialNamingsFactory.cs" />
+    <Compile Include="DocumentNaming\SpecialNamings\YearNaming.cs" />
     <Compile Include="EF\InDocContext.cs" />
     <Compile Include="EF\InDocContextInitializer.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
