--- a/Source/SenseNet/InDoc.Tests.Data/InDoc.Tests.Data.csproj
+++ b/Source/SenseNet/InDoc.Tests.Data/InDoc.Tests.Data.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="NamingApproachesManipulationsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeManipulationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
